edit overflow fixed

--- a/UI/src/components/InfoSection_1.css
+++ b/UI/src/components/InfoSection_1.css
@@ -36,7 +36,7 @@
   }
 
   .info_img_1{
-    width: 106%;
+    width: 100%;
     margin-left: 0px;
     margin-right: 0px;
     padding: 1%;
@@ -67,7 +67,7 @@
   }
 
   .info_img_1{
-    width: 106%;
+    width: 100%;
     margin-left: 0px;
     margin-right: 0px;
     padding: 1%;
